--- a/TODO
+++ b/TODO
@@ -10,4 +10,6 @@
 10) Aggiungere commenti e fonti nel codice;
 11) Aggiungere all'esempio di uso, tramite imgui la possibilità di scegliere il campo da visualizzare;
 12) Rimuovere dipendeze non necessarie (es. glm);
-
+13) In draw screen serve disegnare la screen texture con il belnding? Verificare;
+14) Rocrdarsi che lo storing delle posizioni in una texture e l'uso della stessa in un vertex shader si chiama Vertex Texture Fetch (2004) Si usa per creare effetti realistici per i fluidi, acqua, esplozioni (http://www.nvidia.com/object/using_vertex_textures.html)
+15) Uniformare il codice con il compute eliminando le chiamate a texture negli shader
